# gluemp4

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
gluemp4/: __init__.py  __main__.py  init_config.py
src/gluemp4/: __init__.py  __main__.py  init_config.py
